added payment validation
