# handlers/post_validate_payment.go
@@ -1,0 +1,56 @@
+package handlers
+
+import (
+	"crypto/hmac"
+	"crypto/sha256"
+	"database/sql"
+	"e-food/constants"
+	"e-food/models"
+	"e-food/restapi/operations/user"
+	"encoding/hex"
+	"fmt"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/razorpay/razorpay-go"
+)
+
+type validatePayImpl struct {
+	client   *razorpay.Client
+	dbClient *sql.DB
+}
+
+func NewUserPostValidatePaymentHandler(client *razorpay.Client, dbClient *sql.DB) user.PostValidatePaymentHandler {
+	return &validatePayImpl{
+		client:   client,
+		dbClient: dbClient,
+	}
+}
+
+func (impl *validatePayImpl) Handle(params user.PostValidatePaymentParams, p interface{}) middleware.Responder {
+
+	data := params.PreOrder.RazorpayOrderID + "|" + params.PreOrder.RazorpayPaymentID
+	// Create a new HMAC by defining the hash type and the key (as byte array)
+	h := hmac.New(sha256.New, []byte(constants.MyRazorSecret))
+
+	// Write Data to it
+	_, err := h.Write([]byte(data))
+	if err != nil {
+		return user.NewPostValidatePaymentInternalServerError().WithPayload("error decoding")
+	}
+
+	// Get result and encode as hexadecimal string
+	sha := hex.EncodeToString(h.Sum(nil))
+	isSuccess := sha == params.PreOrder.RazorpaySignature
+	if isSuccess {
+		// fetch cart Detail from Razor pay
+		body, err := impl.client.Order.Fetch(params.PreOrder.RazorpayOrderID, nil, nil)
+		if err != nil {
+			fmt.Println("==================")
+			fmt.Println(err.Error())
+			fmt.Println("==================")
+		}
+		cartId := body["receipt"]
+		fmt.Println(cartId)
+		// convert cart to order
+	}
+	return user.NewPostValidatePaymentOK().WithPayload(&models.SuccessResponse{Success: isSuccess})
+}
